# ZHashCheck

./: LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: compare.rs  dedup.rs  export.rs  external.rs  hash.rs  mod.rs  qa.rs  settings.rs  trash.rs  verify.rs
src-tauri/src/compare/: mod.rs
src-tauri/src/dedup/: mod.rs  prefilter.rs
src-tauri/src/hashing/: algos.rs  mod.rs  stream.rs
src-tauri/src/jobs/: mod.rs
src-tauri/src/persist/: mod.rs
src-tauri/src/scan/: mod.rs
src-tauri/src/trash_log/: mod.rs
src-tauri/src/verify/: checksum_file.rs  mod.rs
src/bindings/: Algo.ts  AppError.ts  ChecksumEntryResult.ts  ChecksumFileReport.ts  ChecksumKind.ts  CompareOpts.ts  CompareReport.ts  DedupOpts.ts  DedupReport.ts  DuplicateFile.ts  DuplicateGroup.ts  ExportEntry.ts  ExportFormat.ts  FileHashes.ts  HistoryEntry.ts  JobError.ts  JobId.ts  JobProgress.ts  PairedEntry.ts  PasteVerify.ts  QaWorkspace.ts  Settings.ts  SoloEntry.ts  TrashItemResult.ts  TrashReport.ts  VerifyOutcome.ts
src/components/: CommandPalette.tsx  ContextMenu.tsx  DropOverlay.tsx  HashCell.tsx  Sidebar.tsx  StatusBar.tsx
src/components/ui/: button.tsx  card.tsx  input.tsx
src/hooks/: useContextMenu.ts  useDropFiles.ts  useGlobalHotkeys.ts  useTheme.ts
src/lib/: format.ts  ipc.ts  utils.ts
src/routes/: AboutView.tsx  CompareView.tsx  DuplicatesView.tsx  HashView.tsx  HistoryView.tsx  QaView.tsx  SettingsView.tsx  VerifyView.tsx
src/store/: contextMenu.ts  jobs.ts  ui.ts
src/styles/: globals.css
