# SPDX-License-Identifier: GPL-3.0-or-later
[package]
name = "zhashcheck"
version = "0.1.0"
description = "Drag files in, get MD5/SHA1/SHA256/BLAKE3 instantly. Verify, compare, dedup."
authors = ["ZHashCheck contributors"]
license = "GPL-3.0-or-later"
edition = "2021"
rust-version = "1.80"

[lib]
name = "zhashcheck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri runtime + plugins
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-os = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri-plugin-window-state = "2"

# Async + parallelism
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "fs", "io-util", "time"] }
rayon = "1.10"
dashmap = "6"

# Hashing
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
blake2 = "0.10"
blake3 = { version = "1.5", features = ["rayon"] }
digest = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
crc32fast = "1.4"
subtle = "2.6"

# Filesystem
walkdir = "2.5"
ignore = "0.4"
memmap2 = "0.9"
trash = "5"
hex = "0.4"

# Serde + bindings
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = { version = "10", features = ["serde-compat"] }

# Errors + logging
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
num_cpus = "1.16"
once_cell = "1.20"
parking_lot = "0.12"
uuid = { version = "1.10", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
